@startuml
skinparam style strictuml
skinparam classBackgroundColor #E3F2FD
skinparam classBorderColor #1565C0
skinparam defaultFontName Arial

title Modelo Relacional - Plataforma Logística

entity "Usuarios" as users {
  * user_id : uuid <<PK>>
  --
  email : varchar
  role : enum (admin, dispatcher, driver, client)
  created_at : timestamp
}

entity "Entidades (Clientes/Sucursales)" as entities {
  * entity_id : serial <<PK>>
  --
  user_id : uuid <<FK>>
  name : varchar
  address : varchar
  phone : varchar
}

entity "Rutas / Fletes (Servicios)" as routes {
  * route_id : serial <<PK>>
  --
  dispatcher_id : uuid <<FK>>
  driver_id : uuid <<FK>>
  status : enum (pending, in_transit, completed)
  start_date : timestamp
  end_date : timestamp
}

entity "Guías de Remisión (Bienes/Paquetes)" as packages {
  * package_id : serial <<PK>>
  --
  tracking_code : varchar <<UNIQUE>>
  sender_id : int <<FK>>
  receiver_id : int <<FK>>
  route_id : int <<FK>>
  description : text
  weight : decimal
  status : enum (received, assigned, in_transit, delivered, exception)
  created_at : timestamp
}

entity "Trazabilidad (Tracking Log)" as tracking_logs {
  * log_id : serial <<PK>>
  --
  package_id : int <<FK>>
  user_id : uuid <<FK>> (actor_who_changed)
  previous_status : varchar
  new_status : varchar
  location_note : varchar
  changed_at : timestamp
}

users ||--o{ entities : "has profile"
users ||--o{ routes : "dispatcher creates"
users ||--o{ routes : "driver assigned to"
users ||--o{ tracking_logs : "records event"

entities ||--o{ packages : "sends"
entities ||--o{ packages : "receives"

routes ||--o{ packages : "contains"

packages ||--o{ tracking_logs : "has history"

@enduml
